clusters/cluster1/kubernetes/apps/livekit/app/livekit-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: livekit-service
  namespace: livekit
  labels:
    app.kubernetes.io/name: livekit
spec:
  selector:
    app.kubernetes.io/name: livekit
  ports:
    - name: http
      port: 7880
      protocol: TCP
      targetPort: 7880
